# picotemplate

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  main.cpp
config/: CMakeLists.txt  FreeRTOSConfig.h  lwipopts.h
src/: CMakeLists.txt  FreeRTOSConfig.h  blink.c  httpserver.c  lwipopts.h  shared_init.c  shared_init.h
src/blink/: CMakeLists.txt  blink.c
src/hello_mqtt/: CMakeLists.txt  hello_mqtt.c  hello_mqtt.cc
src/sun/: CMakeLists.txt  README.md  cd74hc595.cc  cd74hc595.h  cd74hc595.pio  disp_4digit.cc  disp_4digit.h  src_2_1.cc  src_2_2.cc  src_2_3.cc  src_2_4.cc  src_2_5.cc  src_3_4.cc  src_5_1.cc  src_5_3.cc  src_5_4.cc
src/tcp_echo/: CMakeLists.txt  tcp_echo.c
